css/style.css
body {
    margin: 0;
    padding: 0;
    font-family: 'PT Sans', Helvetica, Arial, Sans-serif;
}

#map {
    position: absolute;
    top: 0;
    bottom: 0;
    width: 100%;
    height: 800px;
}

#graph-container {
    height: 300px;
}

#graph {
    margin-bottom: 5px;
}

#key {
    height: 55px;
}

h1 {
    font-family: PT Sans Narrow;
    font-size: 29px;
    color: #333333;
    font-weight: normal;
}

h2 {
    color: #8d8d8d;
    font-size: 16px;
}

h3 {
    font-family: 'PT Sans Narrow', Helvetica, Arial, Sans-serif;
    font-weight: bold;
    font-size: 20px;
    margin-top: 0px;
    margin-bottom: 10px;
}

p {
    margin-top: 2px;
    margin-bottom: 0px;
}

#console {
    position: absolute;
    width: 370px;
    margin: 10px;
    padding: 10px 25px;
    top: 0px;
    padding-right: 35px;
    background-color: rgba(255, 255, 255, 0.796);
    border-radius: 5px;
    z-index: 5;
}

.session {
    margin-bottom: 15px;
}

.colour-key {
    width: 9px;
    height: 9px;
    -webkit-border-radius: 25px;
    -moz-border-radius: 25px;
    border-radius: 25px;
    display: inline-block;
    margin-right: 2px;
}

ul {
    list-style-type: none;
}
  
#list-group {
    padding: 0px;
}

li {
    color: #333333;
    font-size: 12.5px;
    float: left;
    padding-right: 11px;
    padding-bottom: 10px;
}

#adb {
    position: fixed;
    visibility: visible;
    color: #333333;
    z-index: -999999;
    /* height: 100px; */
    width: 30%;
    margin-left: 45%;
    margin-top: 140px;
}

#adb i {
    font-size: 18px;
}

#adb li {
    color: #333333;
    list-style-type: circle;
}

.label-title {
    color: #4e4e4e;
    font-weight: bold;
}

.mapboxgl-popup-content {
    color: #333333;
    background-color: #ffffff;
    /* border-color: #91785D; */
    max-width: 270px;
    /* box-shadow: 3px 3px 2px #8B5D33; */
  }
  
  /* change colour of tip to match popup */
  
  .mapboxgl-popup-anchor-top .mapboxgl-popup-tip,
  .mapboxgl-popup-anchor-top-left .mapboxgl-popup-tip,
  .mapboxgl-popup-anchor-top-right .mapboxgl-popup-tip {
    border-bottom-color: #ffffff;
  }
  .mapboxgl-popup-anchor-bottom .mapboxgl-popup-tip,
  .mapboxgl-popup-anchor-bottom-left .mapboxgl-popup-tip,
  .mapboxgl-popup-anchor-bottom-right .mapboxgl-popup-tip {
    border-top-color: #ffffff;
  }
  .mapboxgl-popup-anchor-left .mapboxgl-popup-tip {
    border-right-color: #ffffff;
  }
  .mapboxgl-popup-anchor-right .mapboxgl-popup-tip {
    border-left-color: #ffffff;
  }

#logo-mobile {
    position: absolute;
    top: 518px;
    right: 9px;
    z-index: 9000;
    height: 25px;
    width: 25px;
    background-image:url(../img/logo-mobile.svg);
    background-repeat: no-repeat;
    visibility: hidden;
}

#logo-tablet {
    position: absolute;
    top: 600px;
    right: 7px;
    z-index: 9000;
    height: 30px;
    width: 30px;
    background-image:url(../img/logo-mobile.svg);
    background-repeat: no-repeat;
    visibility: hidden;
}

#logo-laptop {
    position: absolute;
    top: 737px;
    right: 0px;
    z-index: 9000;
    height: 45px;
    width: 110px;
    background-image:url(../img/logo-laptop.svg);
    background-size: contain;
    background-repeat: no-repeat;
    visibility: visible;
}

#arrow-graph {
    position: inherit;
    background-image:url(../img/arrow.svg);
    width: 25px;
    height: 110px;
    top: 194px;
    left: 348px;
    background-size: contain;
    background-repeat: no-repeat;
    z-index: 333333;
}

.icon {
    background-size: contain;
    background-repeat: no-repeat;
    display: block;
    width: 22px;
    height: 22px;
    margin-left: 5px;
}

.logo {
    opacity: 0.5;
}

#scroll-area {
    position: absolute;
    right: 0px;
    width: 40px;
    height: 800px;       
}

@media screen and (max-width: 1024px) {

    #map {
        height: 655px;
    }

    #scroll-area {
        height: 655px;
    }

    #graph {
        display: none;
    }

    #arrow-graph {
        display: none;
    }

    #logo-tablet {
        visibility: visible;
    }
    
    #logo-laptop {
        visibility: hidden;
    }

    #console {
        width: 350px;
    }

    h1 {
        font-size: 23px;
    }

    li {
        font-size: 12px;
        padding-right: 8px;
    }

}

@media screen and (max-width: 640px) {

    h1 {
        display: none;
    }

    h2 {
        font-size: 14px;
    }

    li {
        font-size: 12px;
    }

    #console {
        width: 180px;
    }

    #logo-tablet {
      /* move as mapbox credit changes */
      top: 592px;
    }

    #map {
        height: 470px;
    }

    #scroll-area {
        height: 470px;
    }

    #adb {
        visibility: hidden;
    }

}

@media screen and (max-width: 607px) {
    #logo-tablet {
      top: 402px;
    }
}



@media screen and (max-width: 480px) {

    #logo-mobile {
        top: 410px;
    }
  
    #logo-tablet {
      visibility: hidden;
    }
  
    #logo-mobile {
      visibility: visible;
    }
  
}

